--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,7 +7,7 @@ sites:
   - name: Ian Myles
     url: https://www.ianmyles.com
   - name: Cairde
-    url: https://www.cairde.ie
+    url: https://cairde.ie
   - name: HealthConnect
     url: https://healthconnect.ie/
   - name: Hacker News
